--- a/GDPR.html
+++ b/GDPR.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-    <title>TOP FORTUNE KINGS ⭕ Privacy policy</title>
+    <title>TOP FORTUNE KINGS ⭕ Stackable Rings</title>
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
@@ -14,17 +14,17 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css">
 
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="css/main.css?ver=3" rel="stylesheet">
 </head>
@@ -76,27 +76,57 @@
         </div>
     </header>
 
-    <div class="gradient-border2 padding-pp background" id="box">
-        <h1 class="h1__font">Delivery info</h1>
-        <p class="p__font">We offer free shipping for all orders within Italy. Orders will be processed within 1-2
-            business days and
-            shipped via courier service. Delivery times may vary depending on your location, but generally, you can
-            expect to receive your order within 3-5 business days.<br><br>
+    <div class="gradient-border padding-ab background2">
+        <h1 class="h1__font">CENTER FOR<br>
+            GENERAL DATA PROTECTION REGULATION<br>
+            (GDPR)</h1>
+        <h2 class="h1__font" style="font-size: 18px;">Data Controller</h2>
+        <p class="p__font">
+            Email: info@topfortunekings.com<br>
+            Phone: +39 390 654 0113<br>
+            Mail: Via Vittorio Alfieri, 20, 10121 Torino TO<br><br>
 
-            For international orders, shipping fees will apply and will be calculated at checkout. Please note that
-            international orders may be subject to customs and import duties, which will be the responsibility of the
-            customer.<br><br>
+        <h2 class="h1__font" style="font-size: 18px;"> Purpose of Data Processing</h2>
+        <p class="p__font">Top Fortune Kings processes personal data of its customers for the following purposes:
+            Processing and fulfillment of orders
+            Customer service and support
+            Marketing and promotions
+            Payment processing
+            Compliance with legal obligations</p>
 
-            Once your order has been shipped, you will receive a confirmation email with tracking information so you can
-            monitor your shipment's progress.<br><br>
+        <h2 class="h1__font" style="font-size: 18px;    margin-top: 30px;"> Legal Basis for Data Processing</h2>
+        <p class="p__font">Top Fortune Kings SRL relies on the following legal bases for processing personal data:
+            Consent: When customers give their consent for specific processing activities
+            Contract: When processing personal data is necessary for the performance of a contract with the customer
+            Legitimate Interest: When processing personal data is necessary for the legitimate interests of the company
+            or a
+            third party, such as fraud prevention or improving our services
+            Legal Obligation: When processing personal data is necessary for compliance with a legal obligation
+        </p>
 
-            Please ensure that the shipping address you provide is accurate and complete to ensure a smooth delivery. If
-            your package is returned to us due to an incorrect or incomplete address, additional shipping fees may
-            apply.<br><br>
+        <h2 class="h1__font" style="font-size: 18px;margin-top: 30px;"> Data Retention</h2>
+        <p class="p__font">Top Fortune Kings SRL will retain personal data for as long as necessary to fulfill the
+            purposes for which
+            it
+            was collected, unless a longer retention period is required by law.</p>
 
-            If you have any questions about shipping, please contact our customer service team at
-            support@topfortunekings.com.</p>
+        <h2 class="h1__font" style="font-size: 18px;margin-top: 30px;">Data Subject Rights</h2>
+        <p class="p__font">Customers have the following rights with respect to their personal data:
+            Right of access: The right to request access to their personal data and information about how it is being
+            processed<br>
+            Right to rectification: The right to request that inaccurate personal data be corrected<br>
+            Right to erasure: The right to request that personal data be deleted<br>
+            Right to restriction of processing: The right to request that processing of personal data be restricted<br>
+            Right to data portability: The right to receive a copy of personal data in a structured, machine-readable
+            format<br>
+            Right to object: The right to object to processing of personal data for certain purposes<br>
+            Right to withdraw consent: The right to withdraw consent to processing of personal data where processing is
+            based on consent<br></p>
 
+        <h2 class="h1__font" style="font-size: 18px;margin-top: 30px;">Complaints</h2>
+        <p class="p__font">Customers have the right to lodge a complaint with the relevant supervisory authority if they
+            believe their
+            rights have been infringed.</p>
     </div>
 
     <section>
@@ -153,6 +183,8 @@
 
         </footer>
     </section>
+
+
 
     <script src="./js/main.js"></script>
 </body>
