--- a/about.html
+++ b/about.html
@@ -1,87 +1,135 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <title>TOP FORTUNE KINGS ⭕ Stackable Rings</title>
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css">
 
-<meta name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link href="css/main.css?ver=3" rel="stylesheet">
 </head>
 
 <body>
- <header>
+  <header>
     <div class="header-layout" id="header">
-<div class="header-nav">
-  <div class="header-nav__wrap">
- <div class="header-nav__logo">
-  <a href="/" 
-  class="header-nav__logo-l header-font">
-    TOP FORTUNE KINGS
-  </a>
- </div>
-  </div> 
-</div>
+      <div class="header-nav">
+        <div class="header-nav__wrap">
+          <div class="header-nav__logo">
+            <a href="/" class="header-nav__logo-l header-font">
+              TOP FORTUNE KINGS
+            </a>
+            <div class="header__box">
+              <ul class="header__box-list">
+                <a href="about.html">
+                  <li class="header__box-item">About Us</li>
+                </a>
+                <a href="contact.html">
+                  <li class="header__box-item">Contact Us</li>
+                </a>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<div class="main-nav" id="main">
-  <ul class="main-nav__m main-nav__m-1">
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="diamond.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">Diamond Wedding Bands</span>
-      </a>
-    </li>
-    
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="stackable.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">Stackable Rings</span>
-      </a>
-    </li>
+      <div class="main-nav" id="main">
+        <ul class="main-nav__m main-nav__m-1">
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="./diamond.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Diamond Wedding Bands</span>
+            </a>
+          </li>
 
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="eternity.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">Eternity Rings</span>
-      </a>
-    </li>
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="stackable.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Stackable Rings</span>
+            </a>
+          </li>
 
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1 active" href="about.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">About us</span>
-      </a>
-    </li>
-  </ul>
-</div>
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="eternity.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Eternity Rings</span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </header>
-  
-  <div class="gradient-border padding-ab">At Top Fortune Kings, our mission is to develop a more transparent, sustainable, compassionate & comprehensive adornments industry. <br>We believe in making adornments you'll be able feel great around wearing, without ever compromising between quality and inner voice.
-</div>
+
+  <div class="gradient-border padding-ab background">
+    <h1 class="h1__font">About us</h1>
+    <p class="p__font">At Top Fortune Kings, our mission is to develop a more transparent,
+      sustainable, compassionate & comprehensive adornments industry. <br>We believe in making adornments you'll be able
+      feel great around wearing, without ever compromising between quality and inner voice.</p>
+  </div>
 
   <section>
-    <footer>
-      <nav id="nav-3">
-        <a class="link-3" href="./privacy-policy.html">Privacy policy</a>
-        <a class="link-3" href="./terms.html">Terms</a>
-        <a class="link-3" href="./return.html">Return</a>
-        <a class="link-3" href="./contact.html">Contact</a>
-      </nav>
+    <footer class="footer__main">
+
+      <div>
+        <div class="nav__flex">
+          <div class="nav__links" id="nav-3">
+            <p class="nav__title">Menu</p>
+            <a class="link-3" href="./GDPR.html">GDPR</a>
+            <a class="link-3" href="./terms.html">Terms & Conditions</a>
+            <a class="link-3" href="./privacy-policy.html">Privacy Policy</a>
+            <a class="link-3" href="./diamond.html">Products</a>
+          </div>
+
+          <div class="nav__flex">
+            <div class="nav__links" id="nav-3">
+              <p class="nav__title">About</p>
+              <a class="link-3" href="./about.html">About Us</a>
+              <a class="link-3" href="./contact.html">Contact Us</a>
+            </div>
+          </div>
+
+          <div class="footer__menu-mb">
+            <div class="nav__flex">
+              <div class="nav__links" id="nav-3">
+                <p class="nav__title">Orders</p>
+                <a class="link-3" href="./return.html">Free 30 Day Returns</a>
+                <a class="link-3" href="./delivery.html">Delivery info</a>
+                <a class="link-3" href="./return.html">Warranty info</a>
+              </div>
+            </div>
+
+            <div class="nav__flex">
+              <div class="nav__links" id="nav-3">
+                <p class="nav__title">Follow us</p>
+                <div class="nav__socials">
+                  <div style="display: flex; ">
+                    <a class="link-3" href="#"><img src="/img/Socials/instagram.png" alt="Instagram"></a>
+                    <a class="link-3" href="#"><img src="/img/Socials/facebook.png" alt="Facebook"></a>
+                  </div>
+                  <div style="display: flex;">
+                    <a class="link-3" href="#"><img src="/img/Socials/twitter.png" alt="Twitter"></a>
+                    <a class="link-3" href="#"><img src="/img/Socials/linkedin.png" alt="Linkedin"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
     </footer>
   </section>
 
@@ -89,4 +137,5 @@
 
   <script src="./js/main.js"></script>
 </body>
+
 </html>
