--- a/index.html
+++ b/index.html
@@ -73,12 +73,6 @@
               <span class="main-nav__in-t main-nav__in-t-1">Eternity Rings</span>
             </a>
           </li>
-
-          <li class="main-nav__mi-1">
-            <a class="main-nav__in main-nav__in-1" href="about.html">
-              <span class="main-nav__in-t main-nav__in-t-1">About us</span>
-            </a>
-          </li>
         </ul>
       </div>
     </div>
@@ -138,7 +132,7 @@
         <div class="nav__flex">
           <div class="nav__links" id="nav-3">
             <p class="nav__title">Menu</p>
-            <a class="link-3" href="./privacy-policy.html">GDPR</a>
+            <a class="link-3" href="./GDPR.html">GDPR</a>
             <a class="link-3" href="./terms.html">Terms & Conditions</a>
             <a class="link-3" href="./privacy-policy.html">Privacy Policy</a>
             <a class="link-3" href="./diamond.html">Products</a>
