--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -70,40 +70,45 @@
               <span class="main-nav__in-t main-nav__in-t-1">Eternity Rings</span>
             </a>
           </li>
-
-          <li class="main-nav__mi-1">
-            <a class="main-nav__in main-nav__in-1" href="about.html">
-              <span class="main-nav__in-t main-nav__in-t-1">About us</span>
-            </a>
-          </li>
         </ul>
       </div>
     </div>
   </header>
 
-  <div class="gradient-border2 padding-pp" id="box">
-    <h1 style="font-size: larger;margin-top: 30px;margin-bottom: 15px;font-weight: 600;">Introduction</h1>
-    <p>At TopFortuneKings.com, we take the protection of your personal data seriously. This GDPR (General Data
-      Protection Regulation) outlines how we collect, use, store, and protect your personal data, as well as your rights
-      as a data subject.
+  <div class="gradient-border2 padding-pp background" id="box">
+    <h1 class="h1__font" style="text-align: center;">Privacy Notice</h1>
+    <p class="p__font">Welcome to TopFortuneKings.com, your destination for exquisite diamond jewelry that's sure to
+      dazzle and delight.<br><br>
+      We take pride in offering a wide range of high-quality products. Our expertly crafted pieces are designed to make
+      you feel special and help you celebrate life's most precious moments.<br><br>
 
-      We respect the rights of individuals to control their personal data, including the right to access, rectify,
-      erase, or restrict processing of their personal data. We also provide transparent and clear information about our
-      data processing activities through this privacy policy.
-
-      This statement outlines the company's commitment to complying with GDPR and ensuring the protection of personal
-      data, as well as providing a clear and transparent explanation of their data processing activities.</p>
-    <h1 style="font-size: larger; margin-top: 30px;margin-bottom: 15px;font-weight: 600;">Data Collection</h1>
-    <p>We collect personal data from you when you create an account, place an order, or contact us for support. This
+      At TopFortuneKings.com, we understand the importance of privacy and the trust our customers place in us when they
+      provide us with their personal information. That's why we have implemented measures to ensure that your personal
+      information is collected, used, and disclosed in accordance with applicable laws and best practices. <br>We are
+      committed to protecting the privacy and security of this information in compliance with applicable data protection
+      laws and regulations, including the General Data Protection Regulation (GDPR).
+      <br><br>
+      This Privacy Notice is intended to inform you about how we collect, use, and disclose your personal information
+      when you use our website and purchase our products. We encourage you to read this notice carefully to understand
+      our privacy practices and your rights regarding your personal information.
+    </p>
+    <h1 class="h1__font" style="font-size: 18px; margin-top: 30px;">Information We Collect</h1>
+    <p class="p__font">We collect personal data from you when you create an account, place an order, or contact us for
+      support. This
       data may include your name, address, email address, phone number, payment information, and order history.
     </p>
-    <h1 style="font-size: larger;margin-top: 30px;margin-bottom: 15px;font-weight: 600;">Data Use</h1>
-    <p>We use your personal data to process and deliver your orders, to communicate with you about your orders and our
-      products, and to provide you with customer support. We may also use your data to personalize your experience on
-      our website, to send marketing communications if you have given us consent to do so, and to improve our website
-      and services.</p>
 
-    <h1 style="font-size: larger;margin-top: 30px;margin-bottom: 15px;font-weight: 600;">Data Retention</h1>
+    <h1 style="font-size: larger;margin-top: 30px;margin-bottom: 15px;font-weight: 600;">Data Use</h1>
+    <p>We may collect the following types of personal information when you visit our website or use our services:<br>
+
+      Contact information, such as your name, email address, mailing address, and phone number.<br>
+      Payment information, such as your credit card number, expiration date, and billing address.<br>
+      Order information, such as the products you purchase, shipping address, and order history.<br>
+      Other information you provide to us, such as your product reviews, feedback, and other interactions with our
+      customer support team.<br></p>
+
+    <h1 style="font-size: larger;margin-top: 30px;margin-bottom: 15px;font-weight: 600;"> How We Use Your Information
+    </h1>
     <p>We will retain your personal data for as long as necessary to fulfill the purposes for which it was collected,
       unless a longer retention period is required or permitted by law.</p>
 
