--- a/terms.html
+++ b/terms.html
@@ -1,28 +1,30 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <title>TOP FORTUNE KINGS ⭕ Terms & Conditions</title>
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css">
 
 
-<meta name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
 
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
@@ -30,79 +32,142 @@
 </head>
 
 <body>
- <header>
+  <header>
     <div class="header-layout" id="header">
-<div class="header-nav">
-  <div class="header-nav__wrap">
- <div class="header-nav__logo">
-  <a href="./index.php" 
-  class="header-nav__logo-l header-font" >
-    TOP FORTUNE KINGS
-  </a>
- </div>
-  </div> 
-</div>
+      <div class="header-nav">
+        <div class="header-nav__wrap">
+          <div class="header-nav__logo">
+            <a href="/" class="header-nav__logo-l header-font">
+              TOP FORTUNE KINGS
+            </a>
+            <div class="header__box">
+              <ul class="header__box-list">
+                <a href="about.html">
+                  <li class="header__box-item">About Us</li>
+                </a>
+                <a href="contact.html">
+                  <li class="header__box-item">Contact Us</li>
+                </a>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<div class="main-nav" id="main">
-  <ul class="main-nav__m main-nav__m-1">
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="diamond.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">Diamond Wedding Bands</span>
-      </a>
-    </li>
-    
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="stackable.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">Stackable Rings</span>
-      </a>
-    </li>
+      <div class="main-nav" id="main">
+        <ul class="main-nav__m main-nav__m-1">
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="./diamond.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Diamond Wedding Bands</span>
+            </a>
+          </li>
 
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="eternity.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">Eternity Rings</span>
-      </a>
-    </li>
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="stackable.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Stackable Rings</span>
+            </a>
+          </li>
 
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="about.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">About us</span>
-      </a>
-    </li>
-  </ul>
-</div>
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="eternity.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Eternity Rings</span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </header>
-  
-  <div class="gradient-border2 padding-term"  >
-     <h1 style="font-size: larger;text-align: center; font-weight: 600;">Terms & Conditions</h1> 
-    <p class="p-lh">These terms and conditions apply to the TopFortuneKings site found at topfortunekings.com and its auxiliaries and associates explicitly consolidate these Conditions ("Conditions"). In a few occurrences, a specific TopFortuneKings item acquired through the Site may be subject to extra arrangements, rules, terms ("Terms"). 
-        Within the occasion that such Terms are conflicting with these Conditions, the Terms might oversee. 
-        BY Going to AND/OR Utilizing THIS Site IN ANY WAY, SUCH AS BROWSING Items OR Setting AN Arrange, YOU Concur TO THESE TERMS AND CONDITIONS. 
-        If it's not too much trouble perused these Conditions carefully. In case you are doing not wish to be bound by these Conditions, don't get or utilize the TopFortuneKings Site.</p>
-    <h2 class="p-lh" style="text-align: center; font-weight: 600;">Change of Terms</h2>
-    <p class="p-lh">TopFortuneKings may, at its sole watchfulness, reexamine or include modern terms to these Conditions from time to time without take note to you. 
-        Such corrections and increases might be considered compelling instantly upon take note, which TopFortuneKings may donate by any implies, counting, without impediment, by posting the reexamined Conditions on the TopFortuneKings Site. 
-        You're dependable for checking on the TopFortuneKingsSoilLocation for any alterations to these Conditions that will influence your rights or commitments. Any alter or alteration will be compelling promptly upon posting of the corrections on the Site. 
-        Any get to or utilize by you of the TopFortuneKings
-        Site after changes to these Conditions will constitute your acceptance of the reexamined terms. In case you are doing not concur to the revised terms, you must halt utilizing the Site.</p>
-    <h2 class="p-lh"  style="text-align: center; font-weight: 600;">Data on Our Site</h2>
-    <p class="p-lh">
-        TopFortuneKings is committed to giving current and exact data on our web locales, mail, chat, and phone communications. We don't , in any case, warrant that this data is continuously adjust, precise or total. In uncommon circumstances, information, counting costs, may be incorrectly shown on our Site due to framework and typographical mistakes which may happen. Incidental mistakes or wrong publicized costs are not official on TopFortuneKings, and may be balanced by TopFortuneKings at any time.
+
+  <div class="gradient-border2 padding-term background">
+    <h1 class="h1__font" style="text-align: center;">Terms & Conditions</h1>
+    <p class="p__font">These terms and conditions apply to the TopFortuneKings site found at topfortunekings.com and its
+      auxiliaries and associates explicitly consolidate these Conditions ("Conditions"). In a few occurrences, a
+      specific TopFortuneKings item acquired through the Site may be subject to extra arrangements, rules, terms
+      ("Terms").
+      Within the occasion that such Terms are conflicting with these Conditions, the Terms might oversee.
+      BY Going to AND/OR Utilizing THIS Site IN ANY WAY, SUCH AS BROWSING Items OR Setting AN Arrange, YOU Concur TO
+      THESE TERMS AND CONDITIONS.
+      If it's not too much trouble perused these Conditions carefully. In case you are doing not wish to be bound by
+      these Conditions, don't get or utilize the TopFortuneKings Site.</p>
+    <h2 class="h1__font" style="text-align: center; font-weight: 600; font-size:18px!important;   margin-top: 30px;">
+      Change
+      of Terms
+    </h2>
+    <p class="p__font">TopFortuneKings may, at its sole watchfulness, reexamine or include modern terms to these
+      Conditions
+      from time to time without take note to you.
+      Such corrections and increases might be considered compelling instantly upon take note, which TopFortuneKings may
+      donate by any implies, counting, without impediment, by posting the reexamined Conditions on the TopFortuneKings
+      Site.
+      You're dependable for checking on the TopFortuneKingsSoilLocation for any alterations to these Conditions that
+      will influence your rights or commitments. Any alter or alteration will be compelling promptly upon posting of the
+      corrections on the Site.
+      Any get to or utilize by you of the TopFortuneKings
+      Site after changes to these Conditions will constitute your acceptance of the reexamined terms. In case you are
+      doing not concur to the revised terms, you must halt utilizing the Site.</p>
+    <h2 class="h1__font" style="font-size: 18px;    margin-top: 30px;text-align: center;">Data on Our Site</h2>
+    <p class="p__font">
+      TopFortuneKings is committed to giving current and exact data on our web locales, mail, chat, and phone
+      communications. We don't , in any case, warrant that this data is continuously adjust, precise or total. In
+      uncommon circumstances, information, counting costs, may be incorrectly shown on our Site due to framework and
+      typographical mistakes which may happen. Incidental mistakes or wrong publicized costs are not official on
+      TopFortuneKings, and may be balanced by TopFortuneKings at any time.
     </p>
-</div>
+  </div>
 
   <section>
-    <footer>
-      <nav id="nav-3" style="margin-top: 0px;">
-        <a class="link-3" href="./privacy-policy.html">Privacy policy</a>
-        <a class="link-3 footer-active" href="./terms.html">Terms</a>
-        <a class="link-3" href="./return.html">Return</a>
-        <a class="link-3" href="./contact.html">Contact</a>
-      </nav>
+    <footer class="footer__main">
+
+      <div>
+        <div class="nav__flex">
+          <div class="nav__links" id="nav-3">
+            <p class="nav__title">Menu</p>
+            <a class="link-3" href="./GDPR.html">GDPR</a>
+            <a class="link-3" href="./terms.html">Terms & Conditions</a>
+            <a class="link-3" href="./privacy-policy.html">Privacy Policy</a>
+            <a class="link-3" href="./diamond.html">Products</a>
+          </div>
+
+          <div class="nav__flex">
+            <div class="nav__links" id="nav-3">
+              <p class="nav__title">About</p>
+              <a class="link-3" href="./about.html">About Us</a>
+              <a class="link-3" href="./contact.html">Contact Us</a>
+            </div>
+          </div>
+
+          <div class="footer__menu-mb">
+            <div class="nav__flex">
+              <div class="nav__links" id="nav-3">
+                <p class="nav__title">Orders</p>
+                <a class="link-3" href="./return.html">Free 30 Day Returns</a>
+                <a class="link-3" href="./delivery.html">Delivery info</a>
+                <a class="link-3" href="./return.html">Warranty info</a>
+              </div>
+            </div>
+
+            <div class="nav__flex">
+              <div class="nav__links" id="nav-3">
+                <p class="nav__title">Follow us</p>
+                <div class="nav__socials">
+                  <div style="display: flex; ">
+                    <a class="link-3" href="#"><img src="/img/Socials/instagram.png" alt="Instagram"></a>
+                    <a class="link-3" href="#"><img src="/img/Socials/facebook.png" alt="Facebook"></a>
+                  </div>
+                  <div style="display: flex;">
+                    <a class="link-3" href="#"><img src="/img/Socials/twitter.png" alt="Twitter"></a>
+                    <a class="link-3" href="#"><img src="/img/Socials/linkedin.png" alt="Linkedin"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
     </footer>
   </section>
 
 
 
 </body>
+
 </html>
