--- a/delivery.html
+++ b/delivery.html
@@ -76,8 +76,8 @@
         </div>
     </header>
 
-    <div class="gradient-border2 padding-pp background" id="box">
-        <h1 class="h1__font">Delivery info</h1>
+    <div class="gradient-border2 padding-pp background">
+        <h1 class="h1__font" style="text-align: center">Delivery info</h1>
         <p class="p__font">We offer free shipping for all orders within Italy. Orders will be processed within 1-2
             business days and
             shipped via courier service. Delivery times may vary depending on your location, but generally, you can
@@ -126,7 +126,7 @@
                                 <p class="nav__title">Orders</p>
                                 <a class="link-3" href="./return.html">Free 30 Day Returns</a>
                                 <a class="link-3" href="./delivery.html">Delivery info</a>
-                                <a class="link-3" href="./return.html">Warranty info</a>
+                                <a class="link-3" href="warranty.html">Warranty info</a>
                             </div>
                         </div>
 
