--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <p class="nav__title">Orders</p>
                 <a class="link-3" href="./return.html">Free 30 Day Returns</a>
                 <a class="link-3" href="./delivery.html">Delivery info</a>
-                <a class="link-3" href="./return.html">Warranty info</a>
+                <a class="link-3" href="warranty.html">Warranty info</a>
               </div>
             </div>
 
