--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -75,7 +75,7 @@
     </div>
   </header>
 
-  <div class="gradient-border2 padding-pp background" id="box">
+  <div class="gradient-border2 padding-pp background">
     <h1 class="h1__font" style="text-align: center;">Privacy Notice</h1>
     <p class="p__font">Welcome to TopFortuneKings.com, your destination for exquisite diamond jewelry that's sure to
       dazzle and delight.<br><br>
@@ -92,39 +92,40 @@
       when you use our website and purchase our products. We encourage you to read this notice carefully to understand
       our privacy practices and your rights regarding your personal information.
     </p>
-    <h1 class="h1__font" style="font-size: 18px; margin-top: 30px;">Information We Collect</h1>
+    <h1 class="h1__font" style="font-size: 18px; margin-top: 30px;text-align: center">Information We Collect</h1>
     <p class="p__font">We collect personal data from you when you create an account, place an order, or contact us for
       support. This
       data may include your name, address, email address, phone number, payment information, and order history.
     </p>
 
-    <h1 style="font-size: larger;margin-top: 30px;margin-bottom: 15px;font-weight: 600;">Data Use</h1>
-    <p>We may collect the following types of personal information when you visit our website or use our services:<br>
+    <h1 class="h1__font" style="font-size: 18px;margin-top: 30px;text-align: center">We use your personal information
+      to:</h1>
+    <p class="p__font">Process your orders and provide our products and services to you.
+      Communicate with you about your orders, products, and services.
+      Improve and personalize our products and services.
+      Protect against fraud and unauthorized transactions.
+      Comply with legal obligations.</p>
 
-      Contact information, such as your name, email address, mailing address, and phone number.<br>
-      Payment information, such as your credit card number, expiration date, and billing address.<br>
-      Order information, such as the products you purchase, shipping address, and order history.<br>
-      Other information you provide to us, such as your product reviews, feedback, and other interactions with our
-      customer support team.<br></p>
-
-    <h1 style="font-size: larger;margin-top: 30px;margin-bottom: 15px;font-weight: 600;"> How We Use Your Information
+    <h1 class="h1__font" style="font-size: 18px;margin-top: 30px;text-align: center;"> Disclosure of Your Information
     </h1>
-    <p>We will retain your personal data for as long as necessary to fulfill the purposes for which it was collected,
-      unless a longer retention period is required or permitted by law.</p>
+    <p class="p__font">We may share your personal information with third-party service providers who perform services on
+      our behalf, such as shipping, payment processing, and fraud prevention. We may also share your personal
+      information with our affiliates and business partners.</p>
 
-    <h1 style="font-size: larger;margin-top: 30px;margin-bottom: 15px;font-weight: 600;">Data Protection</h1>
-    <p>We take appropriate technical and organizational measures to protect your personal data from unauthorized access,
-      disclosure, or loss. We use secure servers and encryption to protect your data during transmission, and we
-      restrict access to your data to authorized personnel only.</p>
+    <h1 class="h1__font" style="font-size: 18px;margin-top: 30px;text-align: center">Your Rights</h1>
+    <p class="p__font">You have the right to access and control your personal information. You may request access to
+      your personal information, correct inaccuracies, or request that we delete your personal information. To exercise
+      these rights, please contact us using the contact information provided below.</p>
 
-    <h1 style="font-size: larger;margin-top: 30px;margin-bottom: 15px;font-weight: 600;">Data Subject Rights</h1>
-    <p>You have the right to access, rectify, or erase your personal data, as well as the right to restrict or object to
-      its processing, and the right to data portability. You also have the right to withdraw your consent to our
-      processing of your data at any time.</p>
+    <h1 class="h1__font" style="font-size: 18px;margin-top: 30px;text-align: center;">Security</h1>
+    <p class="p__font">We take reasonable measures to protect your personal information from unauthorized access, use,
+      or disclosure. However, no security system is impenetrable, and we cannot guarantee the security of your personal
+      information.</p>
 
-    <h1 style="font-size: larger;margin-top: 30px;margin-bottom: 15px;font-weight: 600;">Data Controller and Contact
-      Information</h1>
-    <p>TopFortuneKings.com is the data controller of your personal data. If you have any questions or concerns regarding
+    <h1 class="h1__font" style="font-size: 18px;margin-top: 30px;text-align: center">Changes to this Privacy Notice
+    </h1>
+    <p class="p__font">TopFortuneKings.com is the data controller of your personal data. If you have any questions or
+      concerns regarding
       our GDPR or the processing of your personal data, please contact us at info@topfortunekings.com. We will respond
       to your request as soon as possible, but no later than one month from the date of receipt.</p>
 
@@ -157,7 +158,7 @@
                 <p class="nav__title">Orders</p>
                 <a class="link-3" href="./return.html">Free 30 Day Returns</a>
                 <a class="link-3" href="./delivery.html">Delivery info</a>
-                <a class="link-3" href="./return.html">Warranty info</a>
+                <a class="link-3" href="warranty.html">Warranty info</a>
               </div>
             </div>
 
