--- a/return.html
+++ b/return.html
@@ -1,101 +1,156 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <title>TOP FORTUNE KINGS ⭕ Return</title>
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
 
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 
-<meta name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link href="css/main.css?ver=3" rel="stylesheet">
 </head>
 
 <body>
- <header>
+  <header>
     <div class="header-layout" id="header">
-<div class="header-nav">
-  <div class="header-nav__wrap">
- <div class="header-nav__logo">
-  <a href="/" 
-  class="header-nav__logo-l header-font" >
-    TOP FORTUNE KINGS
-  </a>
- </div>
-  </div> 
-</div>
+      <div class="header-nav">
+        <div class="header-nav__wrap">
+          <div class="header-nav__logo">
+            <a href="/" class="header-nav__logo-l header-font">
+              TOP FORTUNE KINGS
+            </a>
+            <div class="header__box">
+              <ul class="header__box-list">
+                <a href="about.html">
+                  <li class="header__box-item">About Us</li>
+                </a>
+                <a href="contact.html">
+                  <li class="header__box-item">Contact Us</li>
+                </a>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<div class="main-nav" id="main">
-  <ul class="main-nav__m main-nav__m-1">
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="diamond.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">Diamond Wedding Bands</span>
-      </a>
-    </li>
-    
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="stackable.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">Stackable Rings</span>
-      </a>
-    </li>
+      <div class="main-nav" id="main">
+        <ul class="main-nav__m main-nav__m-1">
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="./diamond.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Diamond Wedding Bands</span>
+            </a>
+          </li>
 
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="eternity.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">Eternity Rings</span>
-      </a>
-    </li>
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="stackable.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Stackable Rings</span>
+            </a>
+          </li>
 
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="about.html">
-        <span class="main-nav__in-t main-nav__in-t-1" style="color:#fff">About us</span>
-      </a>
-    </li>
-  </ul>
-</div>
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="eternity.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Eternity Rings</span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </header>
-  
-  <div class="gradient-border2 return-h" 
-  id="box">
-  <h1 class="ret-mt">Return Policy</h1>
- <p class="p-font padding-r">
-We want you to be completely satisfied with your diamond jewelry purchase from topfortunekings.com. If for any reason you are not satisfied, you may return your item within 30 days of delivery for a full refund, exchange, or store credit.<br><br>
 
-To be eligible for a return, your item must be unused and in the same condition that you received it, with all original packaging and tags intact. Please note that personalized or custom-made items are not eligible for return.<br><br>
+  <div class="gradient-border2 return-h background">
+    <h1 class="h1__font" style="text-align: center;">Return Policy</h1>
+    <p class="p__font font-padding">
+      We want you to be completely satisfied with your diamond jewelry purchase from topfortunekings.com. If for any
+      reason you are not satisfied, you may return your item within 30 days of delivery for a full refund, exchange, or
+      store credit.<br><br>
 
-To initiate a return, please contact our customer service team by email at returns@topfortunekings.com or by phone at +39 390 654 0113. We will provide you with instructions on how to return your item, including the shipping address and any applicable fees.<br><br>
+      To be eligible for a return, your item must be unused and in the same condition that you received it, with all
+      original packaging and tags intact. Please note that personalized or custom-made items are not eligible for
+      return.<br><br>
 
-Once we receive your return, we will inspect the item to ensure that it meets our return policy requirements. If approved, we will process your refund, exchange, or store credit within 10 business days. Refunds will be issued to the original payment method, minus any shipping fees or restocking fees, if applicable.<br><br>
+      To initiate a return, please contact our customer service team by email at returns@topfortunekings.com or by phone
+      at +39 390 654 0113. We will provide you with instructions on how to return your item, including the shipping
+      address and any applicable fees.<br><br>
 
-Please note that we are not responsible for any loss or damage to the item during shipping. We recommend using a trackable shipping method and purchasing shipping insurance for the full value of the item.<br><br>
+      Once we receive your return, we will inspect the item to ensure that it meets our return policy requirements. If
+      approved, we will process your refund, exchange, or store credit within 10 business days. Refunds will be issued
+      to the original payment method, minus any shipping fees or restocking fees, if applicable.<br><br>
 
-If you have any questions or concerns about our return policy, please don't hesitate to contact us. We are here to help you find the perfect diamond jewelry for your needs and provide a seamless and enjoyable shopping experience.</p> 
-</div>
+      Please note that we are not responsible for any loss or damage to the item during shipping. We recommend using a
+      trackable shipping method and purchasing shipping insurance for the full value of the item.<br><br>
+
+      If you have any questions or concerns about our return policy, please don't hesitate to contact us. We are here to
+      help you find the perfect diamond jewelry for your needs and provide a seamless and enjoyable shopping experience.
+    </p>
+  </div>
 
   <section>
-    <footer>
-      <nav id="nav-3" style="margin-top: 0px;">
-        <a class="link-3" href="./privacy-policy.html">Privacy policy</a>
-        <a class="link-3" href="./terms.html">Terms</a>
-        <a class="link-3 footer-active" href="./return.html">Return</a>
-        <a class="link-3" href="./contact.html">Contact</a>
-      </nav>
+    <footer class="footer__main">
+
+      <div>
+        <div class="nav__flex">
+          <div class="nav__links" id="nav-3">
+            <p class="nav__title">Menu</p>
+            <a class="link-3" href="./GDPR.html">GDPR</a>
+            <a class="link-3" href="./terms.html">Terms & Conditions</a>
+            <a class="link-3" href="./privacy-policy.html">Privacy Policy</a>
+            <a class="link-3" href="./diamond.html">Products</a>
+          </div>
+
+          <div class="nav__flex">
+            <div class="nav__links" id="nav-3">
+              <p class="nav__title">About</p>
+              <a class="link-3" href="./about.html">About Us</a>
+              <a class="link-3" href="./contact.html">Contact Us</a>
+            </div>
+          </div>
+
+          <div class="footer__menu-mb">
+            <div class="nav__flex">
+              <div class="nav__links" id="nav-3">
+                <p class="nav__title">Orders</p>
+                <a class="link-3" href="./return.html">Free 30 Day Returns</a>
+                <a class="link-3" href="./delivery.html">Delivery info</a>
+                <a class="link-3" href="warranty.html">Warranty info</a>
+              </div>
+            </div>
+
+            <div class="nav__flex">
+              <div class="nav__links" id="nav-3">
+                <p class="nav__title">Follow us</p>
+                <div class="nav__socials">
+                  <div style="display: flex; ">
+                    <a class="link-3" href="#"><img src="/img/Socials/instagram.png" alt="Instagram"></a>
+                    <a class="link-3" href="#"><img src="/img/Socials/facebook.png" alt="Facebook"></a>
+                  </div>
+                  <div style="display: flex;">
+                    <a class="link-3" href="#"><img src="/img/Socials/twitter.png" alt="Twitter"></a>
+                    <a class="link-3" href="#"><img src="/img/Socials/linkedin.png" alt="Linkedin"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
     </footer>
   </section>
 
@@ -103,4 +158,5 @@ If you have any questions or concerns about our return policy, please don't hesi
 
   <script src="./js/main.js"></script>
 </body>
+
 </html>
