--- a/w6.html
+++ b/w6.html
@@ -1,151 +1,186 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <title>TOP FORTUNE KINGS ⭕ Diamond Wedding Bands</title>
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<meta name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
- <header>
+  <header>
     <div class="header-layout" id="header">
-<div class="header-nav">
-  <div class="header-nav__wrap">
- <div class="header-nav__logo">
-  <a href="./index.php" class="header-nav__logo-l header-font">
-    TOP FORTUNE KINGS
-  </a>
- </div>
-  </div> 
-</div>
-</div>
+      <div class="header-nav">
+        <div class="header-nav__wrap">
+          <div class="header-nav__logo">
+            <a href="/" class="header-nav__logo-l header-font">
+              TOP FORTUNE KINGS
+            </a>
+            <div class="header__box">
+              <ul class="header__box-list">
+                <a href="about.html">
+                  <li class="header__box-item">About Us</li>
+                </a>
+                <a href="contact.html">
+                  <li class="header__box-item">Contact Us</li>
+                </a>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<div class="main-nav" id="main">
-  <ul class="main-nav__m main-nav__m-1">
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="./diamond.html">
-        <span class="main-nav__in-t main-nav__in-t-1">Diamond Wedding Bands</span>
-      </a>
-    </li>
-    
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="stackable.html">
-        <span class="main-nav__in-t main-nav__in-t-1">Stackable Rings</span>
-      </a>
-    </li>
+      <div class="main-nav" id="main">
+        <ul class="main-nav__m main-nav__m-1">
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="./diamond.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Diamond Wedding Bands</span>
+            </a>
+          </li>
 
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="eternity.html">
-        <span class="main-nav__in-t main-nav__in-t-1">Eternity Rings</span>
-      </a>
-    </li>
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="stackable.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Stackable Rings</span>
+            </a>
+          </li>
 
-    <li class="main-nav__mi-1">
-      <a class="main-nav__in main-nav__in-1" href="about.html">
-        <span class="main-nav__in-t main-nav__in-t-1">About us</span>
-      </a>
-    </li>
-  </ul>
-</div>
+          <li class="main-nav__mi-1">
+            <a class="main-nav__in main-nav__in-1" href="eternity.html">
+              <span class="main-nav__in-t main-nav__in-t-1">Eternity Rings</span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </header>
 
   <section>
-    <div class="w-full relative flex items-center px-4 pt-14 pb-8 sm:px-6 sm:pt-8 lg:p-8" 
-    style="height: 100vh;"> 
+    <div class="w-full relative flex items-center px-4 pt-14 pb-8 sm:px-6 sm:pt-8 lg:p-8" style="height: 100vh;">
       <div class="w-full grid grid-cols-1 gap-y-8 gap-x-6 items-start sm:grid-cols-12 lg:gap-x-8">
-        <div class="aspect-w-2 aspect-h-3 overflow-hidden sm:col-span-4 lg:col-span-5" 
-            style="padding: 30px;">
+        <div class="aspect-w-2 aspect-h-3 overflow-hidden sm:col-span-4 lg:col-span-5" style="padding: 30px;">
 
-          <img src="./img/w/w6.jpg" 
-          alt="Wedding Ring" 
-          class="object-center object-cover prod-inst" 
-          style="padding: 7px;">
+          <img src="./img/w/w6.jpg" alt="Wedding Ring" class="object-center object-cover prod-inst"
+            style="padding: 7px;">
         </div>
 
-        <div class="sm:col-span-8 lg:col-span-7" 
-            style="margin-left: 111px;">
+        <div class="sm:col-span-8 lg:col-span-7">
           <noindex>
-          <h2 class="sm:pr-12 heading-prod2">Tiara</h2>
-        </noindex>
+            <h2 class="sm:pr-12 heading-prod2">Tiara</h2>
+          </noindex>
 
-          <section aria-labelledby="information-heading" class="mt-2">  
+          <section aria-labelledby="information-heading" class="mt-2">
             <p class="text-2xl price-prod2">€1,050</p>
           </section>
-  
+
           <section aria-labelledby="options-heading" class="mt-10">
             <h3 id="options-heading" class="sr-only">Product options</h3>
-  
-            <form>
-              <input type="email"
-              style="font-size: 20px;
+
+            <form class="prod__form" autocomplete="on">
+              <input type="email" style="padding:20px; font-size: 20px;
               font-weight: 300;
-              /* background-color: inherit; */"
-  
-              autocomplete="on"
-              placeholder="Please enter your email" required >
-  
-              <button type="submit" 
-              style="width: inherit; 
-              background-color: #000; 
-              border-radius: 0px;"
-              data-modal-open
-              class="mt-6 w-full border-transparent py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Order</button>
+              /* background-color: inherit; */" autocomplete="on" placeholder="Please enter your email" required>
+
+              <button type="submit" style="width: inherit;
+              background-color: #000;
+              border-radius: 0px;
+              padding: 20px 45px;
+              border: 1px solid #feffd6;" data-modal-open
+                class="mt-6 w-full border-transparent py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Order</button>
             </form>
           </section>
         </div>
       </div>
     </div>
-  </div>
-  </div>
-  
+    </div>
+    </div>
+
     <div class="modal__backdrop is-hidden" data-modal>
       <div class="modal" data-form-modal>
-          <span class="modal__hero-text">Thank you for order! Please wait.
-              <a href=""
-                  target="_blank" 
-                  class="modal__link-btn">
-              </a>
-               <span class="modal__close" data-modal-close>х CLOSE x</span>
-          </span>
+        <span class="modal__hero-text">Thank you for order! Please wait.
+          <a href="" target="_blank" class="modal__link-btn">
+          </a>
+          <span class="modal__close" data-modal-close>х CLOSE x</span>
+        </span>
       </div>
-  </div>
+    </div>
   </section>
 
   <section>
-    <footer>
-      <nav id="nav-3">
-        <a class="link-3" href="./privacy-policy.html">Privacy policy</a>
-        <a class="link-3" href="./terms.html">Terms</a>
-        <a class="link-3" href="./return.html">Return</a>
-        <a class="link-3" href="./contact.html">Contact</a>
-      </nav>
+    <footer class="footer__main">
+
+      <div>
+        <div class="nav__flex">
+          <div class="nav__links" id="nav-3">
+            <p class="nav__title">Menu</p>
+            <a class="link-3" href="./GDPR.html">GDPR</a>
+            <a class="link-3" href="./terms.html">Terms & Conditions</a>
+            <a class="link-3" href="./privacy-policy.html">Privacy Policy</a>
+            <a class="link-3" href="./diamond.html">Products</a>
+          </div>
+
+          <div class="nav__flex">
+            <div class="nav__links" id="nav-3">
+              <p class="nav__title">About</p>
+              <a class="link-3" href="./about.html">About Us</a>
+              <a class="link-3" href="./contact.html">Contact Us</a>
+            </div>
+          </div>
+
+          <div class="footer__menu-mb">
+            <div class="nav__flex">
+              <div class="nav__links" id="nav-3">
+                <p class="nav__title">Orders</p>
+                <a class="link-3" href="./return.html">Free 30 Day Returns</a>
+                <a class="link-3" href="./delivery.html">Delivery info</a>
+                <a class="link-3" href="warranty.html">Warranty info</a>
+              </div>
+            </div>
+
+            <div class="nav__flex">
+              <div class="nav__links" id="nav-3">
+                <p class="nav__title">Follow us</p>
+                <div class="nav__socials">
+                  <div style="display: flex; ">
+                    <a class="link-3" href="#"><img src="/img/Socials/instagram.png" alt="Instagram"></a>
+                    <a class="link-3" href="#"><img src="/img/Socials/facebook.png" alt="Facebook"></a>
+                  </div>
+                  <div style="display: flex;">
+                    <a class="link-3" href="#"><img src="/img/Socials/twitter.png" alt="Twitter"></a>
+                    <a class="link-3" href="#"><img src="/img/Socials/linkedin.png" alt="Linkedin"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
     </footer>
   </section>
 
   <script src="./js/main.js"></script>
 </body>
+
 </html>
