--- a/warranty.html
+++ b/warranty.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-    <title>TOP FORTUNE KINGS ⭕ Stackable Rings</title>
+    <title>TOP FORTUNE KINGS ⭕ Return</title>
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -15,12 +16,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css">
 
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -76,57 +77,18 @@
         </div>
     </header>
 
-    <div class="gradient-border padding-ab background2">
-        <h1 class="h1__font">CENTER FOR<br>
-            GENERAL DATA PROTECTION REGULATION<br>
-            (GDPR)</h1>
-        <h2 class="h1__font" style="font-size: 18px;">Data Controller</h2>
-        <p class="p__font">
-            Email: info@topfortunekings.com<br>
-            Phone: +39 390 654 0113<br>
-            Mail: Via Vittorio Alfieri, 20, 10121 Torino TO<br><br>
-
-        <h2 class="h1__font" style="font-size: 18px;"> Purpose of Data Processing</h2>
-        <p class="p__font">Top Fortune Kings processes personal data of its customers for the following purposes:
-            Processing and fulfillment of orders
-            Customer service and support
-            Marketing and promotions
-            Payment processing
-            Compliance with legal obligations</p>
-
-        <h2 class="h1__font" style="font-size: 18px;    margin-top: 30px;"> Legal Basis for Data Processing</h2>
-        <p class="p__font">Top Fortune Kings SRL relies on the following legal bases for processing personal data:
-            Consent: When customers give their consent for specific processing activities
-            Contract: When processing personal data is necessary for the performance of a contract with the customer
-            Legitimate Interest: When processing personal data is necessary for the legitimate interests of the company
-            or a
-            third party, such as fraud prevention or improving our services
-            Legal Obligation: When processing personal data is necessary for compliance with a legal obligation
+    <div class="gradient-border2 return-h background">
+        <h1 class="h1__font" style="text-align: center;">Warranty info</h1>
+        <p class="p__font font-padding">
+            At topfortunekings.com, we stand behind the quality of our diamond jewelry. All of our products come with a
+            one-year limited warranty, which covers any manufacturing defects that may arise during normal use of the
+            jewelry. If you experience any issues with your jewelry within the warranty period, please contact our
+            customer service team for assistance. We will repair or replace the defective item free of charge.
+            <br><br>
+            Please note that the warranty does not cover damage caused by accidents, misuse, or normal wear and tear. It
+            also does not cover lost or stolen jewelry. To ensure the longevity of your jewelry, we recommend following
+            our care instructions, which are provided with each purchase.
         </p>
-
-        <h2 class="h1__font" style="font-size: 18px;margin-top: 30px;"> Data Retention</h2>
-        <p class="p__font">Top Fortune Kings SRL will retain personal data for as long as necessary to fulfill the
-            purposes for which
-            it
-            was collected, unless a longer retention period is required by law.</p>
-
-        <h2 class="h1__font" style="font-size: 18px;margin-top: 30px;">Data Subject Rights</h2>
-        <p class="p__font">Customers have the following rights with respect to their personal data:
-            Right of access: The right to request access to their personal data and information about how it is being
-            processed<br>
-            Right to rectification: The right to request that inaccurate personal data be corrected<br>
-            Right to erasure: The right to request that personal data be deleted<br>
-            Right to restriction of processing: The right to request that processing of personal data be restricted<br>
-            Right to data portability: The right to receive a copy of personal data in a structured, machine-readable
-            format<br>
-            Right to object: The right to object to processing of personal data for certain purposes<br>
-            Right to withdraw consent: The right to withdraw consent to processing of personal data where processing is
-            based on consent<br></p>
-
-        <h2 class="h1__font" style="font-size: 18px;margin-top: 30px;">Complaints</h2>
-        <p class="p__font">Customers have the right to lodge a complaint with the relevant supervisory authority if they
-            believe their
-            rights have been infringed.</p>
     </div>
 
     <section>
@@ -136,7 +98,7 @@
                 <div class="nav__flex">
                     <div class="nav__links" id="nav-3">
                         <p class="nav__title">Menu</p>
-                        <a class="link-3" href="./privacy-policy.html">GDPR</a>
+                        <a class="link-3" href="./GDPR.html">GDPR</a>
                         <a class="link-3" href="./terms.html">Terms & Conditions</a>
                         <a class="link-3" href="./privacy-policy.html">Privacy Policy</a>
                         <a class="link-3" href="./diamond.html">Products</a>
